gitops/apps/adguard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard
  namespace: adguard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adguard
  template:
    metadata:
      labels:
        app: adguard
    spec:
      containers:
        - name: adguard
          image: adguard/adguardhome:latest
          ports:
            - containerPort: 3000  # Web UI
            - containerPort: 53    # DNS
          volumeMounts:
            - name: adguard-config
              mountPath: /opt/adguardhome/conf
            - name
