gitops/apps/adguard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard
  namespace: adguard
spec:
  selector:
    app: adguard
  ports:
    - name: web
      port: 80
      targetPort: 3000
    - name: dns
      port: 53
      protocol: UDP
      targetPort: 53
